--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,5 +26,10 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"]
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
