--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "react-axe": "^3.4.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
